# GServer2

./: CMakeLists.txt
src/: CMakeLists.txt  bh_read_file.cpp  bh_read_file.h  main.cpp
wasm-modules/: CMakeLists.txt  build.sh  print.h  test.cpp
